add box around products

--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hot Wings</title>
+  <title>Just Think Toys</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
   <div id="bg"></div>
+
+  <header>
+    <a href="#">Just Think Toys</a>
+  </header>
+
+  <main>
+    <section id="shop">
+      <ul>
+        <li>
+          <span></span>
+          <strong>Hot Wings</strong>
+        </li>
+        <li>
+          <span></span>
+          <strong>Bath Blocks</strong>
+        </li>
+        <li>
+          <span></span>
+          <strong>Flat Rate Shipping</strong>
+        </li>
+      </ul>
+    </section>
+
+    <section id="login">
+      <h1>Shop Now</h1>
+      <p>We have a wide selection of bath toys and airplanes.</p>
+      <a href="#"></a>
+    </section>
+  </main>
 </body>
 </html>
