finish skeleton of design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <main>
-    <section id="shop">
+    <section id="info">
       <ul>
         <li>
           <span></span>
@@ -32,10 +32,10 @@
       </ul>
     </section>
 
-    <section id="login">
-      <h1>Shop Now</h1>
-      <p>We have a wide selection of bath toys and airplanes.</p>
-      <a href="#"></a>
+    <section id="shop">
+      <h1>Just Think Toys</h1>
+      <p>Choose from a wide selection of bath toys and airplanes.</p>
+      <a href="#">Shop Now</a>
     </section>
   </main>
 </body>
