change about page name from index

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </li>
         <li>
           <span></span>
-          <strong>Bath Blocks</strong>
+          <strong>Bath Toys</strong>
         </li>
         <li>
           <span></span>
